<resources>
    <string name="app_name">El ahorcado</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_lose">Vuelve a jugar</string>
    <string name="fragment_info">Información del juego</string>
    <string name="menu_home">Bienvenido al ahorcado</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="play">Play</string>
    <string name="image_hangman_title">image hangman title</string>
    <string name="deme_una_letra">Deme una letra:</string>
    <string name="intento">intento</string>
    <string name="todo">TODO</string>
    <string name="informaci_n">Información</string>
    <string name="applink">GitHub
<a href="https://github.com/PedroGM80/entrega.git">Get it here</a>
</string>
    <string name="textoexplicativo">Es el juego de la ahorcado de tendrás que adivinar la palabra que corresponde a películas de cine generador de de forma aleatoria a partir del retrofit además almacena en una base de datos lo recordé los usuarios que han ganado .</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>