<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="gallego.morales.entrega.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="gallego.morales.entrega.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="gallego.morales.entrega.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/gameFragment"
        android:name="gallego.morales.entrega.GameFragment"
        android:label="game_fragment"
        tools:layout="@layout/game_fragment">
        <action
            android:id="@+id/action_gameFragment_to_winFragment"
            app:destination="@id/winFragment" />
        <action
            android:id="@+id/action_gameFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="gallego.morales.entrega.WinFragment"
        android:label="fragment_win"
        tools:layout="@layout/fragment_win" />
    <fragment
        android:id="@+id/loseFragment"
        android:name="gallego.morales.entrega.LoseFragment"
        android:label="fragment_lose"
        tools:layout="@layout/fragment_lose" />
</navigation>