<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gameViewModel"
            type="gallego.morales.entrega.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".game.GameFragment">

        <TextView
            android:id="@+id/palabraOculta"
            android:layout_width="321dp"
            android:layout_height="56dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="serif"
            android:letterSpacing="0.1"
            android:text="@{gameViewModel.word_show}"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagenJugador"
            app:layout_constraintVertical_bias="0.087" />

        <TextView
            android:id="@+id/peticionLetra"
            android:layout_width="216dp"
            android:layout_height="31dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="106dp"
            android:fontFamily="monospace"
            android:text="@string/deme_una_letra"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.756"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/palabraOculta"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imagenJugador"
            android:layout_width="302dp"
            android:layout_height="273dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:contentDescription="@string/todo"
            android:src="@{context.getDrawable(gameViewModel.live_draw)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138" />

        <Button
            android:id="@+id/buttonIntento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> gameViewModel.intento()}"
            android:text="@string/intento"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/casilleroLetra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.699"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/peticionLetra"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/casilleroLetra"
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="33dp"
            android:autoSizeTextType="uniform"
            android:ems="30"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="1"
            android:minHeight="48dp"
            android:text="@={gameViewModel.entrada_letra}"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonIntento"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/peticionLetra"
            app:layout_constraintVertical_bias="0.468" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>